<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/content_save"
        android:title="@string/save_experiment"
        app:showAsAction="always" />
    <item
        android:id="@+id/prefs"
        android:icon="@drawable/settings"
        android:title="@string/preferences"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bloch"
        android:icon="@drawable/axis_arrow"
        android:title="@string/bloch_sphere"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/matrix"
        android:icon="@drawable/table_edit"
        android:title="@string/matrix_editor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/undo"
        android:title="@string/undo_add_gate"
        app:showAsAction="never" />
    <item
        android:id="@+id/run"
        android:icon="@drawable/play_pause"
        android:title="@string/run"
        app:showAsAction="always" />
</menu>