<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:ems="10"
        android:gravity="center|bottom"
        android:hint="@string/gate_name"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qbitsBar" />

    <SeekBar
        android:id="@+id/qbitsBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_qubit_number"
        app:layout_constraintBottom_toTopOf="@+id/qbitsBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/symbols"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:ems="10"
        android:gravity="center|bottom"
        android:hint="@string/symbols_hint"
        android:singleLine="true"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/colorBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <SeekBar
        android:id="@+id/colorBar"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="4dp"
        android:max="0xffffff"
        android:progress="0x777777"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbols" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/matrix"
        android:inputType="textMultiLine"
        android:maxLines="16"
        android:digits="0123456789.,-+i\n"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorBar" />

</androidx.constraintlayout.widget.ConstraintLayout>